--- a/charts/firefly/values.yaml
+++ b/charts/firefly/values.yaml
@@ -21,7 +21,7 @@ fullnameOverride: ""
 
 persistence:
   # -- If you set this to false, uploaded attachments are not stored persistently and will be lost with every restart of the pod
-  enabled: true
+  enabled: false
   storageClassName: ""
   accessModes: ReadWriteOnce
   # volumeName: your-pv-name
@@ -132,17 +132,21 @@ service:
   port: 80
 
 ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-  # kubernetes.io/tls-acme: "true"
+  enabled: true
+  enableTLS: true
+  className: "traefik"
+  annotations:
+    kubernetes.io/ingress.class: traefik
+    cert-manager.io/cluster-issuer: letsencrypt-production
   hosts:
-    - chart-example.local
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+    - host: example.local
+      paths:
+        - path: /
+          pathType: Prefix
+  tls:
+    - secretName: firefly-tls
+      hosts:
+        - example.local
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -159,7 +163,7 @@ resources: {}
 autoscaling:
   enabled: false
   minReplicas: 1
-  maxReplicas: 100
+  maxReplicas: 3
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
