--- a/charts/firefly/values.yaml
+++ b/charts/firefly/values.yaml
@@ -35,7 +35,7 @@ persistence:
 # -- Environment variables for Firefly III. See docs at: https://github.com/firefly-iii/firefly-iii/blob/main/.env.example
 config:
   # -- Set this to the name of a secret to load environment variables from. If defined, values in the secret will override values in config.env
-  existingSecret: ""
+  existingSecret: "firefly-postgresql-secret"
 
   # -- Set environment variables from configMaps or Secrets
   envValueFrom: {}
@@ -52,7 +52,10 @@ config:
     TZ: "Europe/Amsterdam"
     TRUSTED_PROXIES: "**"
 
-# -- Create a new Secret from values file to store sensitive environment variables. Make sure to keep your secrets encrypted in the repository! For example, you can use the 'helm secrets' plugin (https://github.com/jkroepke/helm-secrets) to encrypt and manage secrets. If the 'config.existingSecret' value is set, a new Secret will not be created.
+# -- Create a new Secret from values file to store sensitive environment variables.
+# Make sure to keep your secrets encrypted in the repository!
+# For example, you can use the 'helm secrets' plugin (https://github.com/jkroepke/helm-secrets) to encrypt and manage secrets.
+# If the 'config.existingSecret' value is set, a new Secret will not be created.
 secrets:
   env:
     APP_PASSWORD: "CHANGE_ENCRYPT_ME"
